--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -8,6 +8,7 @@ deny 2001:41d0:1008:20d1::1;
 deny 2001:41d0:304:200::3348;
 deny 2001:41d0:304:200::3ea4;
 deny 2001:41d0:304:200::9dce;
+deny 2001:41d0:305:2100::4ede;
 deny 2001:41d0:601:1100::26d0;
 deny 2001:41d0:601:1100::6524;
 deny 2001:41d0:601:1100::6f85;
@@ -143,6 +144,9 @@ deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:100:3::14;
+deny 2602:ff16:1:1156::1;
+deny 2602:ff16:1:12a8::1;
+deny 2602:ff16:1:12ca::1;
 deny 2604:2dc0:202:300::ed3;
 deny 2604:a00:101:4:216:3eff:fe2f:1c84;
 deny 2604:a00:101:4:216:3eff:fe2f:20c3;
@@ -763,7 +767,6 @@ deny 2a12:a800:9:1:45:88:186:89;
 deny 2a12:a800:9:1:45:88:186:92;
 deny 2a14:1ec7:1000:a633::1;
 deny 2a14:7583:f607::;
-deny 2a14:c380:280:77::a;
 deny 2a14:c380:50:62::a;
 deny 2c0f:6c0:0:11::5e3d;
 deny 2c0f:6c0:0:d::d28b;
