--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -15,7 +15,6 @@ allow 2001:41d0:601:1100::6f85;
 allow 2001:41d0:601:1100::71bb;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1000::5196;
-allow 2001:41d0:720:e300:25::;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
@@ -767,6 +766,7 @@ allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a14:1ec7:1000:a633::1;
 allow 2a14:7583:f607::;
+allow 2a14:c380:280:77::a;
 allow 2a14:c380:50:62::a;
 allow 2c0f:6c0:0:11::5e3d;
 allow 2c0f:6c0:0:d::d28b;
