--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -128,7 +128,6 @@ set_real_ip_from 139.99.8.57;
 set_real_ip_from 141.98.11.62;
 set_real_ip_from 143.20.64.235;
 set_real_ip_from 144.126.133.74;
-set_real_ip_from 144.172.73.31;
 set_real_ip_from 144.31.188.82;
 set_real_ip_from 146.59.126.232;
 set_real_ip_from 146.59.231.4;
@@ -197,6 +196,7 @@ set_real_ip_from 173.255.198.243;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.58.121.177;
+set_real_ip_from 176.58.89.182;
 set_real_ip_from 176.65.134.4;
 set_real_ip_from 176.65.148.133;
 set_real_ip_from 176.65.148.3;
@@ -509,6 +509,7 @@ set_real_ip_from 192.108.48.150;
 set_real_ip_from 192.159.99.168;
 set_real_ip_from 192.159.99.74;
 set_real_ip_from 192.210.136.31;
+set_real_ip_from 192.34.80.176;
 set_real_ip_from 192.42.116.173;
 set_real_ip_from 192.42.116.174;
 set_real_ip_from 192.42.116.175;
@@ -580,6 +581,7 @@ set_real_ip_from 194.15.115.212;
 set_real_ip_from 194.15.36.117;
 set_real_ip_from 194.163.157.49;
 set_real_ip_from 194.26.192.177;
+set_real_ip_from 194.26.192.22;
 set_real_ip_from 194.26.192.77;
 set_real_ip_from 194.42.196.42;
 set_real_ip_from 194.53.137.102;
@@ -607,7 +609,7 @@ set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 196.196.200.100;
 set_real_ip_from 196.251.69.116;
-set_real_ip_from 198.167.206.205;
+set_real_ip_from 198.167.206.236;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
 set_real_ip_from 198.251.88.18;
@@ -618,6 +620,7 @@ set_real_ip_from 198.58.107.53;
 set_real_ip_from 198.96.155.3;
 set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.51.189;
+set_real_ip_from 198.98.51.249;
 set_real_ip_from 198.98.57.151;
 set_real_ip_from 198.98.57.218;
 set_real_ip_from 198.98.57.74;
@@ -647,7 +650,6 @@ set_real_ip_from 2001:41d0:601:1100::6f85;
 set_real_ip_from 2001:41d0:601:1100::71bb;
 set_real_ip_from 2001:41d0:700:10a2::;
 set_real_ip_from 2001:41d0:701:1000::5196;
-set_real_ip_from 2001:41d0:720:e300:25::;
 set_real_ip_from 2001:41d0:a:5c0::1;
 set_real_ip_from 2001:41d0:a:fe22::1;
 set_real_ip_from 2001:470:1:908::9001;
@@ -919,6 +921,7 @@ set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.28;
+set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
@@ -979,6 +982,7 @@ set_real_ip_from 2604:a00:101:4:216:3eff:fe2f:20c3;
 set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:6400:10:1362::2;
+set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:253:2085:7b82:89a7:2145;
 set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
@@ -1230,7 +1234,6 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1531,6 +1534,7 @@ set_real_ip_from 2a12:a800:11:1:124:198:132:52;
 set_real_ip_from 2a12:a800:11:1:192:159:99:168;
 set_real_ip_from 2a12:a800:11:1:192:159:99:74;
 set_real_ip_from 2a12:a800:1:1:194:26:192:177;
+set_real_ip_from 2a12:a800:1:1:194:26:192:22;
 set_real_ip_from 2a12:a800:1:1:194:26:192:77;
 set_real_ip_from 2a12:a800:1:1:2:58:56:220;
 set_real_ip_from 2a12:a800:1:1:2:58:56:35;
@@ -1593,7 +1597,6 @@ set_real_ip_from 2a12:a800:9:1:45:88:186:89;
 set_real_ip_from 2a12:a800:9:1:45:88:186:92;
 set_real_ip_from 2a14:1ec7:1000:a633::1;
 set_real_ip_from 2a14:7583:f607::;
-set_real_ip_from 2a14:c380:280:77::a;
 set_real_ip_from 2a14:c380:50:62::a;
 set_real_ip_from 2c0f:6c0:0:11::5e3d;
 set_real_ip_from 2c0f:6c0:0:d::d28b;
@@ -1754,7 +1757,6 @@ set_real_ip_from 51.81.222.62;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
@@ -1868,7 +1870,6 @@ set_real_ip_from 87.118.122.30;
 set_real_ip_from 87.118.122.51;
 set_real_ip_from 87.120.222.33;
 set_real_ip_from 87.120.254.132;
-set_real_ip_from 87.121.79.55;
 set_real_ip_from 88.151.192.2;
 set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
