--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -289,7 +289,6 @@ allow 185.177.238.26;
 allow 185.177.238.9;
 allow 185.183.157.214;
 allow 185.183.159.40;
-allow 185.191.204.254;
 allow 185.191.239.158;
 allow 185.191.239.172;
 allow 185.191.239.49;
@@ -585,7 +584,6 @@ allow 194.26.192.177;
 allow 194.26.192.22;
 allow 194.26.192.77;
 allow 194.42.196.42;
-allow 194.53.137.102;
 allow 194.53.137.156;
 allow 194.55.167.14;
 allow 195.160.220.104;
@@ -1462,7 +1460,6 @@ allow 2a0d:bbc7::f816:3eff:feec:9f18;
 allow 2a0d:bbc7::f816:3eff:fef2:6521;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:1d80:13:51e8::1;
-allow 2a0e:1d80:13:b6d5::1;
 allow 2a0e:1d80:17:6f8d::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
@@ -1599,6 +1596,7 @@ allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a14:1ec7:1000:a633::1;
 allow 2a14:7583:f607::;
+allow 2a14:c380:280:77::a;
 allow 2a14:c380:50:62::a;
 allow 2c0f:6c0:0:11::5e3d;
 allow 2c0f:6c0:0:d::d28b;
@@ -1783,7 +1781,6 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.190;
-allow 5.34.182.203;
 allow 54.36.101.21;
 allow 54.36.108.162;
 allow 5.45.102.93;
@@ -1872,6 +1869,7 @@ allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.222.33;
 allow 87.120.254.132;
+allow 87.121.79.55;
 allow 88.151.192.2;
 allow 88.80.20.86;
 allow 88.80.26.2;
@@ -1920,7 +1918,6 @@ allow 94.102.51.15;
 allow 94.142.241.194;
 allow 94.142.244.16;
 allow 94.156.152.234;
-allow 94.156.152.8;
 allow 94.16.115.121;
 allow 94.16.116.81;
 allow 94.16.121.91;
