--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -289,7 +289,6 @@ deny 185.177.238.26;
 deny 185.177.238.9;
 deny 185.183.157.214;
 deny 185.183.159.40;
-deny 185.191.204.254;
 deny 185.191.239.158;
 deny 185.191.239.172;
 deny 185.191.239.49;
@@ -585,7 +584,6 @@ deny 194.26.192.177;
 deny 194.26.192.22;
 deny 194.26.192.77;
 deny 194.42.196.42;
-deny 194.53.137.102;
 deny 194.53.137.156;
 deny 194.55.167.14;
 deny 195.160.220.104;
@@ -1462,7 +1460,6 @@ deny 2a0d:bbc7::f816:3eff:feec:9f18;
 deny 2a0d:bbc7::f816:3eff:fef2:6521;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:1d80:13:51e8::1;
-deny 2a0e:1d80:13:b6d5::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
 deny 2a0e:4005:1002:ffff:185:40:4:101;
@@ -1599,6 +1596,7 @@ deny 2a12:a800:9:1:45:88:186:89;
 deny 2a12:a800:9:1:45:88:186:92;
 deny 2a14:1ec7:1000:a633::1;
 deny 2a14:7583:f607::;
+deny 2a14:c380:280:77::a;
 deny 2a14:c380:50:62::a;
 deny 2c0f:6c0:0:11::5e3d;
 deny 2c0f:6c0:0:d::d28b;
@@ -1783,7 +1781,6 @@ deny 5.255.99.5;
 deny 5.2.67.226;
 deny 5.2.72.110;
 deny 5.2.79.190;
-deny 5.34.182.203;
 deny 54.36.101.21;
 deny 54.36.108.162;
 deny 5.45.102.93;
@@ -1872,6 +1869,7 @@ deny 87.118.122.30;
 deny 87.118.122.51;
 deny 87.120.222.33;
 deny 87.120.254.132;
+deny 87.121.79.55;
 deny 88.151.192.2;
 deny 88.80.20.86;
 deny 88.80.26.2;
@@ -1920,7 +1918,6 @@ deny 94.102.51.15;
 deny 94.142.241.194;
 deny 94.142.244.16;
 deny 94.156.152.234;
-deny 94.156.152.8;
 deny 94.16.115.121;
 deny 94.16.116.81;
 deny 94.16.121.91;
