--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -629,7 +629,6 @@ deny 2a0d:bbc7::f816:3eff:feec:9f18;
 deny 2a0d:bbc7::f816:3eff:fef2:6521;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:1d80:13:51e8::1;
-deny 2a0e:1d80:13:b6d5::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
 deny 2a0e:4005:1002:ffff:185:40:4:101;
@@ -766,6 +765,7 @@ deny 2a12:a800:9:1:45:88:186:89;
 deny 2a12:a800:9:1:45:88:186:92;
 deny 2a14:1ec7:1000:a633::1;
 deny 2a14:7583:f607::;
+deny 2a14:c380:280:77::a;
 deny 2a14:c380:50:62::a;
 deny 2c0f:6c0:0:11::5e3d;
 deny 2c0f:6c0:0:d::d28b;
