--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -52,6 +52,7 @@ set_real_ip_from 107.189.14.4;
 set_real_ip_from 107.189.14.43;
 set_real_ip_from 107.189.1.9;
 set_real_ip_from 107.189.2.108;
+set_real_ip_from 107.189.27.145;
 set_real_ip_from 107.189.29.184;
 set_real_ip_from 107.189.30.236;
 set_real_ip_from 107.189.30.49;
@@ -289,6 +290,7 @@ set_real_ip_from 185.177.238.26;
 set_real_ip_from 185.177.238.9;
 set_real_ip_from 185.183.157.214;
 set_real_ip_from 185.183.159.40;
+set_real_ip_from 185.191.204.254;
 set_real_ip_from 185.191.239.158;
 set_real_ip_from 185.191.239.172;
 set_real_ip_from 185.191.239.49;
@@ -921,7 +923,6 @@ set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.28;
-set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
@@ -962,12 +963,12 @@ set_real_ip_from 2602:f6f6:2:2634::1;
 set_real_ip_from 2602:f6f6:2:3637::1;
 set_real_ip_from 2602:f6f6:2:90f1::1;
 set_real_ip_from 2602:f6f6:2:941d::1;
-set_real_ip_from 2602:f6f6:2:a27::5;
 set_real_ip_from 2602:f6f6:2:ad5c::1;
 set_real_ip_from 2602:f6f6:2:cf34::1;
 set_real_ip_from 2602:f6f6:2:d31a::1;
 set_real_ip_from 2602:f6f6:2:dc17::1;
 set_real_ip_from 2602:f915:f:3b43::1;
+set_real_ip_from 2602:fa59:5:915::1;
 set_real_ip_from 2602:fa86::be24:11ff:fe70:fc41;
 set_real_ip_from 2602:fa8a:3:a::a;
 set_real_ip_from 2602:fc24:10:bb36::1;
@@ -1234,6 +1235,7 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1273,9 +1275,6 @@ set_real_ip_from 2a07:e03:2a::bcde;
 set_real_ip_from 2a07:e042:1:181::1;
 set_real_ip_from 2a07:e042:1:182::1;
 set_real_ip_from 2a09:2dc2:0:5963::;
-set_real_ip_from 2a09:61c0::20;
-set_real_ip_from 2a09:61c0::21;
-set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a09:61c0::beef;
 set_real_ip_from 2a0a:4cc0:2000:cd4c::12;
 set_real_ip_from 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
@@ -1625,7 +1624,6 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.46.196.22;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
-set_real_ip_from 38.135.24.176;
 set_real_ip_from 38.135.24.30;
 set_real_ip_from 38.135.24.31;
 set_real_ip_from 38.135.24.32;
@@ -1695,9 +1693,6 @@ set_real_ip_from 45.38.20.153;
 set_real_ip_from 45.58.190.74;
 set_real_ip_from 45.61.185.172;
 set_real_ip_from 45.61.188.15;
-set_real_ip_from 45.66.35.20;
-set_real_ip_from 45.66.35.21;
-set_real_ip_from 45.66.35.22;
 set_real_ip_from 45.66.35.35;
 set_real_ip_from 45.79.144.222;
 set_real_ip_from 45.80.158.167;
@@ -1757,6 +1752,7 @@ set_real_ip_from 51.81.222.62;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
@@ -1918,6 +1914,7 @@ set_real_ip_from 94.102.51.15;
 set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
 set_real_ip_from 94.156.152.234;
+set_real_ip_from 94.156.152.8;
 set_real_ip_from 94.16.115.121;
 set_real_ip_from 94.16.116.81;
 set_real_ip_from 94.16.121.91;
