--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -132,12 +132,12 @@ set_real_ip_from 2602:f6f6:2:2634::1;
 set_real_ip_from 2602:f6f6:2:3637::1;
 set_real_ip_from 2602:f6f6:2:90f1::1;
 set_real_ip_from 2602:f6f6:2:941d::1;
-set_real_ip_from 2602:f6f6:2:a27::5;
 set_real_ip_from 2602:f6f6:2:ad5c::1;
 set_real_ip_from 2602:f6f6:2:cf34::1;
 set_real_ip_from 2602:f6f6:2:d31a::1;
 set_real_ip_from 2602:f6f6:2:dc17::1;
 set_real_ip_from 2602:f915:f:3b43::1;
+set_real_ip_from 2602:fa59:5:915::1;
 set_real_ip_from 2602:fa86::be24:11ff:fe70:fc41;
 set_real_ip_from 2602:fa8a:3:a::a;
 set_real_ip_from 2602:fc24:10:bb36::1;
@@ -403,6 +403,7 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -442,9 +443,6 @@ set_real_ip_from 2a07:e03:2a::bcde;
 set_real_ip_from 2a07:e042:1:181::1;
 set_real_ip_from 2a07:e042:1:182::1;
 set_real_ip_from 2a09:2dc2:0:5963::;
-set_real_ip_from 2a09:61c0::20;
-set_real_ip_from 2a09:61c0::21;
-set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a09:61c0::beef;
 set_real_ip_from 2a0a:4cc0:2000:cd4c::12;
 set_real_ip_from 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
